# MedSAMSlicer

./: .gitignore  CMakeLists.txt  README.md  extra_files.ps1  extra_files.sh  infer_SAM21_slicer.py  infer_video_tiny_debug.py  log.txt  requirements  requirements.txt  server.py  setup.py  test.html
MedSAM/: CMakeLists.txt
MedSAM/MedSAMLite/: CMakeLists.txt  MedSAMLite.py
MedSAM/MedSAMLite/Resources/UI/: MedSAMLite.ui
MedSAM/MedSAMLite/Resources/server_essentials/: medsam_interface.py  setup.py  tiny_vit_sam.py
MedSAM/MedSAMLite/Resources/server_essentials/medsam_interface/: interface_impl.py
MedSAM/MedSAMLite/Resources/server_essentials/medsam_interface/engines/: classicmedsam.py
MedSAM/t_SegmentData/: CMakeLists.txt  t_SegmentData.py
MedSAM/t_SegmentData/Resources/UI/: t_SegmentData.ui
MedSAMLite/: MedSAMLite.py
MedSAMLite/Resources/UI/: MedSAMLite.ui
MedSAMLite/Resources/server_essentials/: README.md
MedSAMLite/Resources/server_essentials/medsam_interface/: __init__.py  interface_impl.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/: DAFTsam.py  __init__.py  medficientsam.py  ovmedsam.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/: export_onnx.py  export_torch.py  infer.py  train.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/data/: medsam_datamodule.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/data/components/: medsam_dataset.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/losses/: SAMLoss.py  __init__.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/losses/components/: IoULoss.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/metrics/: generalized_dice.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/: distill_module.py  finetune_module.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/base_sam/: __init__.py  sam.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/efficientvit/: README.md  cls_model_zoo.py  sam_model_zoo.py  seg_model_zoo.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/efficientvit/apps/: setup.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/efficientvit/apps/data_provider/: base.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/efficientvit/apps/trainer/: base.py  run_config.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/efficientvit/apps/utils/: dist.py  ema.py  lr.py  metric.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/efficientvit/clscore/data_provider/: imagenet.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/lite_medsam/: __init__.py  sam.py  tiny_vit.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/onnx/: __init__.py  decoder.py  encoder.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/segment_anything/: README.md  predictor.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/models/segment_anything/modeling/: mask_decoder.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/schedulers/: __init__.py
MedSAMLite/Resources/server_essentials/medsam_interface/engines/src/utils/: __init__.py  multiprocessing.py  transforms.py  utils.py  visualize.py
MedSAMLite/Resources/server_essentials/medsam_interface/models/daft/: prompt_encoder.xml
MedSAMLite/Testing/: credit
checkpoints/: download_checkpoints.ps1
sam2/: build_sam.py  sam2_video_predictor_npz.py
sam2/utils/: misc.py
server/: server.py
slicer/SAM2/: CMakeLists.txt
slicer/SAM2/SAM2/: CMakeLists.txt  SAM2.py
slicer/SAM2/SAM2/Resources/Icons/: attributes.html
slicer/SAM2/SAM2/Resources/UI/: SAM2.ui
(+15 files in other folders)
